Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Passenger class\n"
+    "# Passenger class\n",
+    "class Passanger:\\"
    ]
   },
   {
