Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Driver:\n",
+    "class Driver():\n",
     "    pass"
    ]
   },
@@ -58,7 +58,8 @@
    "outputs": [],
    "source": [
     "# Passenger class\n",
-    "class Passanger:\\"
+    "class Passanger:\n",
+    "    "
    ]
   },
   {
