Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
    "outputs": [],
    "source": [
     "# Passenger class\n",
-    "class Passanger:\n",
-    "    "
+    "class Passanger():\n",
+    "    pass"
    ]
   },
   {
