Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Assign a driver instance\n",
-    "driver = None \n",
+    "driver = No \n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n"
    ]
