--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Assign a driver instance\n",
-    "driver =  \n",
+    "driver = D\n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n"
    ]
