Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "# Assign a driver instance\n",
-    "driver = D\n",
+    "driver = Driver\n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n"
    ]
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Assign a passenger instance\n",
-    "passenger = None \n",
+    "passenger = N \n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n"
    ]
