Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Assign a passenger instance\n",
-    "passenger = N \n",
+    "passenger = Passanger \n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n"
    ]
