--- a/index.ipynb
+++ b/index.ipynb
@@ -53,12 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Passenger class\n",
-    "class Passanger():\n",
+    "class Passenger():\n",
     "    pass"
    ]
   },
@@ -88,7 +88,7 @@
    "outputs": [],
    "source": [
     "# Assign a passenger instance\n",
-    "passenger = Passanger \n",
+    "passenger = Passenger ()\n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n"
    ]
