Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,7 +90,8 @@
     "# Assign a passenger instance\n",
     "passenger = Passenger ()\n",
     "\n",
-    "# Give the passenger instance object a 'rating' of 4.9\n"
+    "# Give the passenger instance object a 'rating' of 4.9\n",
+    "rating = "
    ]
   },
   {
