Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -91,7 +91,7 @@
     "passenger = Passenger ()\n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n",
-    "rating = "
+    "passentgrating = "
    ]
   },
   {
