--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,8 @@
     "# Assign a driver instance\n",
     "driver = Driver()\n",
     "\n",
-    "# Give the driver instance object 'miles_driven' of 100000\n"
+    "# Give the driver instance object 'miles_driven' of 100000\n",
+    "miles_driven"
    ]
   },
   {
@@ -91,7 +92,7 @@
     "passenger = Passenger ()\n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n",
-    "passentgrating = "
+    "passenger.rating = "
    ]
   },
   {
