--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,7 @@
     "driver = Driver()\n",
     "\n",
     "# Give the driver instance object 'miles_driven' of 100000\n",
-    "miles_driven"
+    ".driver.miles_driven."
    ]
   },
   {
