--- a/index.ipynb
+++ b/index.ipynb
@@ -92,7 +92,7 @@
     "passenger = Passenger ()\n",
     "\n",
     "# Give the passenger instance object a 'rating' of 4.9\n",
-    "passenger.rating = "
+    "passenger.rating = 4.9"
    ]
   },
   {
