--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,8 @@
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
-    "        if driv"
+    "        if driver.name = name\n",
+    "        print "
    ]
   },
   {
