--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
     "    for driver in drivers:\n",
     "        if driver.name = name\n",
     "        return driver \n",
-    "    print('')"
+    "    print('Sorry, we couldnt find a d')"
    ]
   },
   {
