Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,9 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-db00efc1d65c>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-db00efc1d65c>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if driver.name = name\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
@@ -124,7 +133,7 @@
     "        if driver.name = name\n",
     "        return driver \n",
     "    print('Sorry, we couldnt find a driver with the name, {}! :(\".format(name))')\n",
-    "    return "
+    "    return None "
    ]
   },
   {
