Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -114,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-7-db00efc1d65c>, line 4)",
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-9-84b5ff07e0c5>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-db00efc1d65c>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if driver.name = name\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-84b5ff07e0c5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return driver\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
-    "        if driver.name = name\n",
+    "        if driver.name == name:\n",
     "        return driver \n",
     "    print('Sorry, we couldnt find a driver with the name, {}! :(\".format(name))')\n",
     "    return None "
