--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Find \"jake\"\n",
-    "output_1 = None\n",
+    "output_1 = find_\n",
     "output_1"
    ]
   },
