--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
    "outputs": [],
    "source": [
     "# Find \"jake\"\n",
-    "output_1 = find_driver_by_name(list_of_D)\n",
+    "output_1 = find_driver_by_name(list_of_drivers,jake)\n",
     "output_1"
    ]
   },
