--- a/index.ipynb
+++ b/index.ipynb
@@ -173,12 +173,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Driver at 0x7f20d88fe438>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find \"jake\"\n",
-    "output_1 = find_driver_by_name(list_of_drivers,jake)\n",
+    "output_1 = find_driver_by_name(list_of_drivers,\"jake\")\n",
     "output_1"
    ]
   },
