Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,7 +200,7 @@
    "outputs": [],
    "source": [
     "# Find \"michelle\"\n",
-    "output_2 = find_driver_by_\n",
+    "output_2 = find_driver_by_name(list_of_drivers,\"m\")\n",
     "output_2"
    ]
   },
