--- a/index.ipynb
+++ b/index.ipynb
@@ -195,12 +195,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Driver at 0x7f20d88fe358>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Find \"michelle\"\n",
-    "output_2 = find_driver_by_name(list_of_drivers,\"m\")\n",
+    "output_2 = find_driver_by_name(list_of_drivers,\"michelle\")\n",
     "output_2"
    ]
   },
@@ -211,7 +222,7 @@
    "outputs": [],
    "source": [
     "# Find \"allison\"\n",
-    "output_3 = None\n",
+    "output_3 = No\n",
     "output_3"
    ]
   },
