Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "outputs": [],
    "source": [
     "# Find \"allison\"\n",
-    "output_3 = No\n",
+    "output_3 = find_driver_by_name(list)\n",
     "output_3"
    ]
   },
