Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,12 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry, we couldnt find a driver with the name, {}! :(\".format(name))\n"
+     ]
+    }
+   ],
    "source": [
     "# Find \"allison\"\n",
-    "output_3 = find_driver_by_name(list)\n",
+    "output_3 = find_driver_by_name(list_of_drivers,\"allison\")\n",
     "output_3"
    ]
   },
