--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
     "    for driver in drivers:\n",
     "        if driver.name == name:\n",
     "            return driver \n",
-    "    print('Sorry, we couldnt find a driver with the name, {}! :(\".format(name))')\n",
+    "    print('Sorry, we couldnt find a driver with the name, {}! :(.format(name))')\n",
     "    return None "
    ]
   },
@@ -217,14 +217,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry, we couldnt find a driver with the name, {}! :(\".format(name))\n"
+      "Sorry, we couldnt find a driver with the name, {}! :(.format(name))\n"
      ]
     }
    ],
