--- a/index.ipynb
+++ b/index.ipynb
@@ -114,25 +114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-22-cfe24cb92082>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-22-cfe24cb92082>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    print('Sorry, we couldnt find a driver with the name, {}! :(\".format(name))\u001b[0m\n\u001b[0m                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_driver_by_name(drivers, name):\n",
     "    # Write your code here\n",
     "    for driver in drivers:\n",
     "        if driver.name == name:\n",
     "            return driver \n",
-    "    print('Sorry, we couldnt find a driver with the name, {}! :(\".format(name))\n",
+    "    print('Sorry, we couldnt find a driver with the name, {}! :('.format(name))\n",
     "    return None "
    ]
   },
