--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,7 @@
     "# Write your function here that returns the list of \n",
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
-    "    for "
+    "    for letter in names"
    ]
   },
   {
