--- a/index.ipynb
+++ b/index.ipynb
@@ -253,7 +253,8 @@
     "# Write your function here that returns the list of \n",
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
-    "    start_with =\n",
+    "    start_with = []\n",
+    "    for drive\n",
     "        "
    ]
   },
