--- a/index.ipynb
+++ b/index.ipynb
@@ -254,7 +254,8 @@
     "# instance objects whose name starts with the given substring\n",
     "def name_starts_with(drivers, substring):\n",
     "    start_with = []\n",
-    "    for drive\n",
+    "    for driver in drivers:\n",
+    "        if \n",
     "        "
    ]
   },
