--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "def name_starts_with(drivers, substring):\n",
     "    start_with = []\n",
     "    for driver in drivers:\n",
-    "        if \n",
+    "        if driver.name.st\n",
     "        "
    ]
   },
