--- a/index.ipynb
+++ b/index.ipynb
@@ -255,7 +255,7 @@
     "def name_starts_with(drivers, substring):\n",
     "    start_with = []\n",
     "    for driver in drivers:\n",
-    "        if driver.name.start.with(substring):\n",
+    "        if driver.name.startwith(substring):\n",
     "            \n",
     "        "
    ]
