Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -256,6 +256,7 @@
     "    start_with = []\n",
     "    for driver in drivers:\n",
     "        if driver.name.startwith(substring):\n",
+    "            start_with.append(driver)\n",
     "            \n",
     "        "
    ]
