--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
     "    for driver in drivers:\n",
     "        if driver.name.startwith(substring):\n",
     "            start_with.append(driver)\n",
-    "            \n",
+    "        return \n",
     "        "
    ]
   },
