--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
     "    for driver in drivers:\n",
     "        if driver.name.startwith(substring):\n",
     "            start_with.append(driver)\n",
-    "    return start_wi \n",
+    "    return start_with \n",
     "        "
    ]
   },
