--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drivers whose name start with 'a'\n"
+    "# Drivers whose name start with 'a'\n",
+    "name_start_with (list_)"
    ]
   },
   {
