--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,7 @@
    "source": [
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
-    "    highest_ra"
+    "    highest_rating = drivers[0]"
    ]
   },
   {
