Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,7 @@
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
     "    highest_rating = drivers[0].rating\n",
-    "    "
+    "    best"
    ]
   },
   {
