--- a/index.ipynb
+++ b/index.ipynb
@@ -305,7 +305,9 @@
     "# Write your function here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
     "    highest_rating = drivers[0].rating\n",
-    "    best_driver"
+    "    best_driver = drivers [0]\n",
+    "    \n",
+    "    for dr"
    ]
   },
   {
