--- a/index.ipynb
+++ b/index.ipynb
@@ -307,7 +307,8 @@
     "    highest_rating = drivers[0].rating\n",
     "    best_driver = drivers [0]\n",
     "    \n",
-    "    for dr"
+    "    for driver in drivers:\n",
+    "        if rating >"
    ]
   },
   {
