Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,7 @@
     "    best_driver = drivers [0]\n",
     "    \n",
     "    for driver in drivers:\n",
-    "        if rating >"
+    "        if driver.rating > highest"
    ]
   },
   {
