Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -308,7 +308,8 @@
     "    best_driver = drivers [0]\n",
     "    \n",
     "    for driver in drivers:\n",
-    "        if driver.rating > highest"
+    "        if driver.rating > highest_rating:\n",
+    "            bes"
    ]
   },
   {
