--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
     "    \n",
     "    for driver in drivers:\n",
     "        if driver.rating > highest_rating:\n",
-    "            bes"
+    "            best_driver = hihes"
    ]
   },
   {
