--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,8 @@
     "    \n",
     "    for driver in drivers:\n",
     "        if driver.rating > highest_rating:\n",
-    "            best_driver = hihes"
+    "            best_driver = driver\n",
+    "            highest_ratin"
    ]
   },
   {
