Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -310,7 +310,8 @@
     "    for driver in drivers:\n",
     "        if driver.rating > highest_rating:\n",
     "            best_driver = driver\n",
-    "            highest_ratin"
+    "            highest_rating = driver.rating\n",
+    "    r"
    ]
   },
   {
