Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,7 +311,7 @@
     "        if driver.rating > highest_rating:\n",
     "            best_driver = driver\n",
     "            highest_rating = driver.rating\n",
-    "    r"
+    "    return best_driv"
    ]
   },
   {
