Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
     "        if driver.rating > highest_rating:\n",
     "            best_driver = driver\n",
     "            highest_rating = driver.rating\n",
-    "    return best_driv"
+    "    return best_driver"
    ]
   },
   {
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the driver with the highest rating\n"
+    "h"
    ]
   },
   {
