--- a/index.ipynb
+++ b/index.ipynb
@@ -327,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "highest_rated_drive"
+    "highest_rated_driver(list_of_drivers)"
    ]
   },
   {
