Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,9 +323,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Driver at 0x7f20d88fe438>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "highest_rated_driver(list_of_drivers)"
    ]
@@ -350,7 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the NewDriver class\n"
+    "# Define the NewDriver class\n",
+    "clas"
    ]
   },
   {
