Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,8 @@
    "outputs": [],
    "source": [
     "# Define the NewDriver class\n",
-    "clas"
+    "class NewDriver():\n",
+    "    "
    ]
   },
   {
