Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,7 @@
    "source": [
     "# Define the NewDriver class\n",
     "class NewDriver():\n",
-    "    "
+    "    def passenger_names"
    ]
   },
   {
