--- a/index.ipynb
+++ b/index.ipynb
@@ -363,7 +363,8 @@
    "source": [
     "# Define the NewDriver class\n",
     "class NewDriver():\n",
-    "    def passenger_names"
+    "    def passenger_names(self):\n",
+    "        "
    ]
   },
   {
