Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,8 @@
     "# Define the NewDriver class\n",
     "class NewDriver():\n",
     "    def passenger_names(self):\n",
-    "        "
+    "        names = []\n",
+    "        for passenger"
    ]
   },
   {
