--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,8 @@
     "class NewDriver():\n",
     "    def passenger_names(self):\n",
     "        names = []\n",
-    "        for passenger"
+    "        for passenger in self.passengers:\n",
+    "            r"
    ]
   },
   {
