Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,7 @@
     "    def passenger_names(self):\n",
     "        names = []\n",
     "        for passenger in self.passengers:\n",
-    "            r"
+    "            names.append()"
    ]
   },
   {
