Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
     "        names = []\n",
     "        for passenger in self.passengers:\n",
     "            names.append(passenger_names)\n",
-    "        return name"
+    "        return names"
    ]
   },
   {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
