Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,10 +416,10 @@
     "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best_driver = \n",
+    "best_driver = Garol\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "\n",
+    "car_name\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "\n",
