Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -419,7 +419,7 @@
     "best_driver = Garol\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "car_name\n",
+    "car_make = toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "\n",
