Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,7 +422,7 @@
     "car_make = toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "\n",
+    "ca_model = \n",
     "\n",
     "# Add the age attribute and assign it 30\n",
     "\n",
