Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,10 +422,10 @@
     "car_make = toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "ca_model = \n",
+    "ca_model = camry\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "\n",
+    "age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n"
    ]
