--- a/index.ipynb
+++ b/index.ipynb
@@ -427,7 +427,8 @@
     "# Add the age attribute and assign it 30\n",
     "age = 30\n",
     "\n",
-    "# Add the passengers attribute and assign it to list_of_passengers\n"
+    "# Add the passengers attribute and assign it to list_of_passengers\n",
+    "best.driver"
    ]
   },
   {
