Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,7 @@
     "age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n",
-    "best.driver"
+    "best_driver.passenger = list_o"
    ]
   },
   {
