Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
     "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best_driver = Garol\n",
+    "best_driver. = Garol\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
     "car_make = toyota\n",
@@ -428,7 +428,7 @@
     "age = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n",
-    "best_driver.passenger = list_o"
+    "best_driver.passenger = list_of_passengers"
    ]
   },
   {
