--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
     "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best_driver. = Garol\n",
+    "best_driver.name = Garol\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
     "car_make = toyota\n",
