--- a/index.ipynb
+++ b/index.ipynb
@@ -419,10 +419,10 @@
     "best_driver.name = Garol\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "car_make = toyota\n",
+    "best_driver.car_make = toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "ca_model = camry\n",
+    "best_d_model = camry\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
     "age = 30\n",
