Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,10 +422,10 @@
     "best_driver.car_make = toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "best_d_model = camry\n",
+    "best_driver.car_model = camry\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
-    "age = 30\n",
+    "best_drage = 30\n",
     "\n",
     "# Add the passengers attribute and assign it to list_of_passengers\n",
     "best_driver.passenger = list_of_passengers"
