Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -428,10 +428,10 @@
     "best_driver = NewDriver() \n",
     "\n",
     "# Add the name attribute and assign it 'Garol'\n",
-    "best_driver.name = Garol\n",
+    "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "best_driver.car_make = toyota\n",
+    "best_driver.car_make = 'toyota\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
     "best_driver.car_model = camry\n",
