--- a/index.ipynb
+++ b/index.ipynb
@@ -431,10 +431,10 @@
     "best_driver.name = 'Garol'\n",
     "\n",
     "# Add the car_make attribute and assign it 'toyota'\n",
-    "best_driver.car_make = 'toyota\n",
+    "best_driver.car_make = 'toyota'\n",
     "\n",
     "# Add the car_model attribute and assign it 'camry'\n",
-    "best_driver.car_model = camry\n",
+    "best_driver.car_model = 'camry'\n",
     "\n",
     "# Add the age attribute and assign it 30\n",
     "best_driver.age = 30\n",
