--- a/index.ipynb
+++ b/index.ipynb
@@ -448,7 +448,7 @@
    "outputs": [],
    "source": [
     "# Find the names of the passengers\n",
-    "names_of_passengers = None \n",
+    "names_of_passengers = passen\n",
     "print(names_of_passengers)"
    ]
   },
