Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
     "class NewDriver():\n",
     "    def passenger_names(self):\n",
     "        names = []\n",
-    "        for passenger in self.passengers:\n",
+    "        for passenger in self.passenger\n",
     "            names.append(passenger.names)\n",
     "        return names"
    ]
