Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
     "    def passenger_names(self):\n",
     "        names = []\n",
     "        for passenger in self.passengers:\n",
-    "            names.append(passenger.names)\n",
+    "            names.append(passenger.name)\n",
     "        return names"
    ]
   },
